# LearnOpenGL

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  shader.fs  shader.h  shader.vs
assets/: vertices.h
glad/src/: glad.c
include/glad/: glad.h
src/: main.cpp
src/headers/: camera.h  mesh.h  model.h  shader.h  vertices.h
src/shaders/: asteroidShader.vs  baseGeometryShader.gs  depth_testing.fs  explodingShader.gs  instancingShader.vs  light.fs  light.vs  modelShader.fs  modelShader.vs  normal_visualisation.gs  normal_visualisation.vs  screenshader.fs  screenshader.vs  shader.fs  shader.gs  shader.vs  single_colour.fs  skyshader.vs
